force-app/main/default/objects/Deposit__c/Deposit__c.object-meta.xml
<CustomObject>
    <label>Deposit</label>
    <nameField>
        <label>Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>