force-app/main/default/objects/Deposit__c/fields/Account_Num__c.field-meta.xml
<CustomField>
    <fullName>Account_Num__c</fullName>
    <label>Account Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>