force-app/main/default/objects/Deposit__c/fields/BAI_Code__c.field-meta.xml
<CustomField>
    <fullName>BAI_Code__c</fullName>
    <label>BAI Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>