force-app/main/default/objects/Deposit__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANZ : AUD</fullName>
            </value>
            <value>
                <fullName>ANZ : NZD</fullName>
            </value>
            <value>
                <fullName>BoA : USD</fullName>
            </value>
            <value>
                <fullName>BoA : CAD</fullName>
            </value>
            <value>
                <fullName>BoA : MXN</fullName>
            </value>
            <value>
                <fullName>BoA : UK : EUR</fullName>
            </value>
            <value>
                <fullName>BoA : UK : GBP</fullName>
            </value>
            <value>
                <fullName>BoA : UK : USD</fullName>
            </value>
            <value>
                <fullName>RBC : CAD</fullName>
            </value>
            <value>
                <fullName>Paypal : USD</fullName>
            </value>
            <value>
                <fullName>Paypal : MXN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>