force-app/main/default/objects/Deposit__c/fields/Bank_Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Batch_Type__c</fullName>
    <label>Bank Batch Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>