force-app/main/default/objects/Deposit__c/fields/Bank_Country_Raw__c.field-meta.xml
<CustomField>
    <fullName>Bank_Country_Raw__c</fullName>
    <label>Bank Country Raw</label>
    <length>50</length>
    <type>Text</type>
</CustomField>