force-app/main/default/objects/Deposit__c/fields/Bank_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference__c</fullName>
    <label>Bank Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>