force-app/main/default/objects/Deposit__c/fields/Check_Num__c.field-meta.xml
<CustomField>
    <fullName>Check_Num__c</fullName>
    <label>Check Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>