force-app/main/default/objects/Deposit__c/fields/Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Type__c</fullName>
    <label>Deposit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>