force-app/main/default/objects/Deposit__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>