force-app/main/default/objects/Deposit__c/fields/Matched_On__c.field-meta.xml
<CustomField>
    <fullName>Matched_On__c</fullName>
    <label>Matched On</label>
    <type>DateTime</type>
</CustomField>