force-app/main/default/objects/Deposit__c/fields/Not_Matched_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Matched_Reason__c</fullName>
    <label>Not Matched Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>