force-app/main/default/objects/Deposit__c/fields/Postmark_Date__c.field-meta.xml
<CustomField>
    <fullName>Postmark_Date__c</fullName>
    <label>Postmark Date</label>
    <type>Date</type>
</CustomField>