force-app/main/default/objects/Deposit__c/fields/Raw_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Raw_Account_Name__c</fullName>
    <label>Raw Account Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>