force-app/main/default/objects/Deposit__c/fields/Raw_Account_Num__c.field-meta.xml
<CustomField>
    <fullName>Raw_Account_Num__c</fullName>
    <label>Raw Account Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>