force-app/main/default/objects/Deposit__c/fields/Raw_data__c.field-meta.xml
<CustomField>
    <fullName>Raw_data__c</fullName>
    <label>Raw data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>